Refactor Footer component layout and add margin to container

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,14 +5,16 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --transition: #dcedff;
 }
 
-/* @media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
   :root {
     --background: #ffffff;
     --foreground: #171717;
+    --transition: #dcedff;
   }
-} */
+}
 
 body {
   color: var(--foreground);
